fix overflow

--- a/frontend/src/components/commentsContainer/commentsContainer.css
+++ b/frontend/src/components/commentsContainer/commentsContainer.css
@@ -2,6 +2,7 @@
     height: 100%;
     box-sizing: border-box;
     width: 100%;
+    overflow: auto;
 }
 
 .show-modal-container {
